Feito backend de upload, porem tenho que corrigir algumas coisas ainda

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/vendor/landing-page/img/bg-masthead.jpg": "/vendor/landing-page/img/bg-masthead.jpg"
 }
