--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.5",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.4",
-        "laraveldaily/theme-downloader": "^0.1.0"
+        "laraveldaily/theme-downloader": "^0.1.0",
+        "spatie/laravel-image-optimizer": "^1.6"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
